--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,12 +12,12 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="../src/site.webmanifest">
-  <link rel="apple-touch-icon" href="../src/icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../src/css/normalize.css">
-  <link rel="stylesheet" href="../src/css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -47,9 +47,9 @@
   </div>
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../src/js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../src/js/plugins.js"></script>
-  <script type="module" src="src/js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script type="module" src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
