--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,7 +49,7 @@
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
-  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="src/js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
